--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tailwindcss/vite": "^4.0.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.4.0",
+    "react-tabs": "^6.1.0",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.14"
   },
