--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.4",
     "firebase": "^11.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,6 +23,7 @@
     "react-router": "^7.4.0",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.14"
   },
