--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-query": "^5.70.0",
     "axios": "^1.8.4",
     "firebase": "^11.5.0",
     "react": "^19.0.0",
